--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="header__left">
           <!-- Logo -->
           <a href="/" class="logo">
-            <img src="./img/logo.jpg" alt="logo" />
+            <img src="img/logo.jpg" alt="logo" />
             <span class="logo__text"> bran<span class="pink bold">d</span></span>
           </a>
 
@@ -68,11 +68,11 @@
         <div class="header__right">
           <div class="header__block">
             <button class="btn__cart" id="cart-btn">
-              <img src="./img/cart.png" alt="cart" />
+              <img src="img/cart.png" alt="cart" />
             </button>
             <div class="cart-menu" id="cart-menu-id">
               <div class="cart-menu__product">
-                <img src="/img/product1.jpg" alt="" class="cart-menu__img" />
+                <img src="img/product1.jpg" alt="" class="cart-menu__img" />
                 <div class="cart-menu__info">
                   <span class="cart-menu__name">Rebox Zane</span>
                   <span class="cart-menu__stars">
@@ -89,7 +89,7 @@
                 </button>
               </div>
               <div class="cart-menu__product">
-                <img src="/img/product2.jpg" alt="" class="cart-menu__img" />
+                <img src="img/product2.jpg" alt="" class="cart-menu__img" />
                 <div class="cart-menu__info">
                   <span class="cart-menu__name">Rebox Zane</span>
                   <span class="cart-menu__stars">
@@ -164,7 +164,7 @@
                   <a class="mega-link" href="#">Tops</a>
                   <a class="mega-link" href="#">Sweaters/Knits</a>
                   <a class="mega-link" href="#">Jackets/Coats</a>
-                  <img class="mega-img" src="/img/menu.jpg" alt="" />
+                  <img class="mega-img" src="img/menu.jpg" alt="" />
                 </div>
               </div>
             </li>
@@ -205,7 +205,7 @@
                   <a class="mega-link" href="#">Tops</a>
                   <a class="mega-link" href="#">Sweaters/Knits</a>
                   <a class="mega-link" href="#">Jackets/Coats</a>
-                  <img class="mega-img" src="/img/menu.jpg" alt="" />
+                  <img class="mega-img" src="img/menu.jpg" alt="" />
                 </div>
               </div>
             </li>
@@ -246,7 +246,7 @@
                   <a class="mega-link" href="#">Tops</a>
                   <a class="mega-link" href="#">Sweaters/Knits</a>
                   <a class="mega-link" href="#">Jackets/Coats</a>
-                  <img class="mega-img" src="/img/menu.jpg" alt="" />
+                  <img class="mega-img" src="img/menu.jpg" alt="" />
                 </div>
               </div>
             </li>
@@ -287,7 +287,7 @@
                   <a class="mega-link" href="#">Tops</a>
                   <a class="mega-link" href="#">Sweaters/Knits</a>
                   <a class="mega-link" href="#">Jackets/Coats</a>
-                  <img class="mega-img" src="/img/menu.jpg" alt="" />
+                  <img class="mega-img" src="img/menu.jpg" alt="" />
                 </div>
               </div>
             </li>
@@ -329,7 +329,7 @@
                   <a class="mega-link" href="#">Tops</a>
                   <a class="mega-link" href="#">Sweaters/Knits</a>
                   <a class="mega-link" href="#">Jackets/Coats</a>
-                  <img class="mega-img" src="/img/menu.jpg" alt="" />
+                  <img class="mega-img" src="img/menu.jpg" alt="" />
                 </div>
               </div>
             </li>
@@ -370,7 +370,7 @@
                   <a class="mega-link" href="#">Tops</a>
                   <a class="mega-link" href="#">Sweaters/Knits</a>
                   <a class="mega-link" href="#">Jackets/Coats</a>
-                  <img class="mega-img" src="/img/menu.jpg" alt="" />
+                  <img class="mega-img" src="img/menu.jpg" alt="" />
                 </div>
               </div>
             </li>
@@ -411,7 +411,7 @@
                   <a class="mega-link" href="#">Tops</a>
                   <a class="mega-link" href="#">Sweaters/Knits</a>
                   <a class="mega-link" href="#">Jackets/Coats</a>
-                  <img class="mega-img" src="/img/menu.jpg" alt="" />
+                  <img class="mega-img" src="img/menu.jpg" alt="" />
                 </div>
               </div>
             </li>
@@ -432,22 +432,22 @@
 
       <section class="hot container">
         <div class="hot__img1 hot__img">
-          <img src="/img/hot1.jpg" alt="hot" />
+          <img src="img/hot1.jpg" alt="hot" />
           <div class="hot__mark"><span>hOT dEAL</span> <span class="pink">FOR MEN</span></div>
         </div>
         <div class="hot__img2 hot__img">
-          <img src="/img/hot2.jpg" alt="hot" />
+          <img src="img/hot2.jpg" alt="hot" />
           <div class="hot__mark"><span>30% offer</span> <span class="pink">women</span></div>
         </div>
         <div class="hot__img3 hot__img">
-          <img src="/img/hot3.jpg" alt="hot" />
+          <img src="img/hot3.jpg" alt="hot" />
           <div class="hot__mark">
             <span>LUXIROUS &amp;&nbsp;trendy</span>
             <span class="pink">ACCESORIES</span>
           </div>
         </div>
         <div class="hot__img4 hot__img">
-          <img src="/img/hot4.jpg" alt="hot" />
+          <img src="img/hot4.jpg" alt="hot" />
           <div class="hot__mark"><span>new arrivals</span> <span class="pink">FOR kids</span></div>
         </div>
       </section>
@@ -460,65 +460,65 @@
         <div class="featured__flex">
           <article class="featured__card">
             <button class="featured__add">
-              <img class="featured__cart" src="./img/cart2.png" alt="cart" /> Add to Cart
+              <img class="featured__cart" src="img/cart2.png" alt="cart" /> Add to Cart
             </button>
-            <img class="featured__img" src="/img/card1.jpg" alt="card" class="featured__img" />
+            <img class="featured__img" src="img/card1.jpg" alt="card" class="featured__img" />
             <p class="featured__item">Mango People T-shirt</p>
             <span class="featured__price">$52.00</span>
           </article>
           <article class="featured__card">
             <button class="featured__add">
-              <img class="featured__cart" src="./img/cart2.png" alt="cart" /> Add to Cart
+              <img class="featured__cart" src="img/cart2.png" alt="cart" /> Add to Cart
             </button>
-            <img class="featured__img" src="/img/card2.jpg" alt="card" class="featured__img" />
+            <img class="featured__img" src="img/card2.jpg" alt="card" class="featured__img" />
             <p class="featured__item">Mango People T-shirt</p>
             <span class="featured__price">$52.00</span>
           </article>
           <article class="featured__card">
             <button class="featured__add">
-              <img class="featured__cart" src="./img/cart2.png" alt="cart" /> Add to Cart
+              <img class="featured__cart" src="img/cart2.png" alt="cart" /> Add to Cart
             </button>
-            <img class="featured__img" src="/img/card3.jpg" alt="card" class="featured__img" />
+            <img class="featured__img" src="img/card3.jpg" alt="card" class="featured__img" />
             <p class="featured__item">Mango People T-shirt</p>
             <span class="featured__price">$52.00</span>
           </article>
           <article class="featured__card">
             <button class="featured__add">
-              <img class="featured__cart" src="./img/cart2.png" alt="cart" /> Add to Cart
+              <img class="featured__cart" src="img/cart2.png" alt="cart" /> Add to Cart
             </button>
-            <img class="featured__img" src="/img/card4.jpg" alt="card" class="featured__img" />
+            <img class="featured__img" src="img/card4.jpg" alt="card" class="featured__img" />
             <p class="featured__item">Mango People T-shirt</p>
             <span class="featured__price">$52.00</span>
           </article>
           <article class="featured__card">
             <button class="featured__add">
-              <img class="featured__cart" src="./img/cart2.png" alt="cart" /> Add to Cart
+              <img class="featured__cart" src="img/cart2.png" alt="cart" /> Add to Cart
             </button>
-            <img class="featured__img" src="/img/card5.jpg" alt="card" class="featured__img" />
+            <img class="featured__img" src="img/card5.jpg" alt="card" class="featured__img" />
             <p class="featured__item">Mango People T-shirt</p>
             <span class="featured__price">$52.00</span>
           </article>
           <article class="featured__card">
             <button class="featured__add">
-              <img class="featured__cart" src="./img/cart2.png" alt="cart" /> Add to Cart
+              <img class="featured__cart" src="img/cart2.png" alt="cart" /> Add to Cart
             </button>
-            <img class="featured__img" src="/img/card6.jpg" alt="card" class="featured__img" />
+            <img class="featured__img" src="img/card6.jpg" alt="card" class="featured__img" />
             <p class="featured__item">Mango People T-shirt</p>
             <span class="featured__price">$52.00</span>
           </article>
           <article class="featured__card">
             <button class="featured__add">
-              <img class="featured__cart" src="./img/cart2.png" alt="cart" /> Add to Cart
+              <img class="featured__cart" src="img/cart2.png" alt="cart" /> Add to Cart
             </button>
-            <img class="featured__img" src="/img/card7.jpg" alt="card" class="featured__img" />
+            <img class="featured__img" src="img/card7.jpg" alt="card" class="featured__img" />
             <p class="featured__item">Mango People T-shirt</p>
             <span class="featured__price">$52.00</span>
           </article>
           <article class="featured__card">
             <button class="featured__add">
-              <img class="featured__cart" src="./img/cart2.png" alt="cart" /> Add to Cart
+              <img class="featured__cart" src="img/cart2.png" alt="cart" /> Add to Cart
             </button>
-            <img class="featured__img" src="/img/card8.jpg" alt="card" class="featured__img" />
+            <img class="featured__img" src="img/card8.jpg" alt="card" class="featured__img" />
             <p class="featured__item">Mango People T-shirt</p>
             <span class="featured__price">$52.00</span>
           </article>
@@ -530,26 +530,26 @@
 
       <div class="sale container">
         <div class="sale__art-block">
-          <img class="sale__img" src="/img/winter.jpg" alt="winter-sale" />
+          <img class="sale__img" src="img/winter.jpg" alt="winter-sale" />
           <div class="sale__offer">
             <span class="sale__primary">30% <span class="pink">OFFER</span> </span
             ><span class="sale__second">FOR WOMEN</span>
           </div>
         </div>
         <div class="sale__advantages">
-          <img class="sale__icon" src="/img/delivery.png" alt="delivery" srcset="" />
+          <img class="sale__icon" src="img/delivery.png" alt="delivery" srcset="" />
           <h3 class="sale__h3">Free Delivery</h3>
           <p class="sale__p">
             Worldwide delivery on&nbsp;all. Authorit tively morph next-generation innov tion with
             extensive models.
           </p>
-          <img class="sale__icon" src="/img/sale.png" alt="sale" srcset="" />
+          <img class="sale__icon" src="img/sale.png" alt="sale" srcset="" />
           <h3 class="sale__h3">Sales &amp;&nbsp;discounts</h3>
           <p class="sale__p">
             Worldwide delivery on&nbsp;all. Authorit tively morph next-generation innov tion with
             extensive models.
           </p>
-          <img class="sale__icon" src="/img/quality.png" alt="quality" srcset="" />
+          <img class="sale__icon" src="img/quality.png" alt="quality" srcset="" />
           <h3 class="sale__h3">Quality assurance</h3>
           <p class="sale__p">
             Worldwide delivery on&nbsp;all. Authorit tively morph next-generation innov tion with
@@ -564,7 +564,7 @@
         <div class="subscribe__flex container">
           <div class="subscribe__container">
             <figure class="subscribe__figure">
-              <img class="subscribe__avatar" src="/img/avatar.png" alt="avatar" />
+              <img class="subscribe__avatar" src="img/avatar.png" alt="avatar" />
               <div class="subscribe__text">
                 <p class="subscribe__citate">
                   &laquo;Vestibulum quis porttitor dui! Quisque viverra nunc&nbsp;mi,
@@ -603,7 +603,7 @@
       <div class="footer__top container">
         <div class="footer__left">
           <div class="logo">
-            <img src="./img/logo.jpg" alt="logo" />
+            <img src="img/logo.jpg" alt="logo" />
             <span class="logo__text"> bran<span class="pink bold">d</span></span>
           </div>
           <div class="footer__about">
@@ -668,5 +668,5 @@
       </div>
     </footer>
   </body>
-  <script src="/scripts/script.js"></script>
+  <script src="scripts/script.js"></script>
 </html>
