--- a/single.html
+++ b/single.html
@@ -4,10 +4,12 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
     <link rel="stylesheet" href="css/reset.css" />
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="css/font-awesome.min.css" />
+    <link rel="stylesheet" href="css/product.css" />
+    <link rel="stylesheet" href="css/single.css" />
+    <title>Single Padge</title>
   </head>
   <body>
     <header class="header">
@@ -420,57 +422,83 @@
         </nav>
       </div>
     </header>
+    <div class="bg_arrivals">
+      <div class="arrivals container">
+        <h2 class="arrivals__h3">new arrivals</h2>
+        <nav class="arrivals__nav">
+          <ol class="arrivals__ol">
+            <li class="arrivals__li"><a href="#" class="arrivals__link"> home </a></li>
+            <li class="arrivals__li"><a href="#" class="arrivals__link"> men </a></li>
+            <li class="arrivals__li">
+              <a href="#" class="arrivals__link link_last"> new arrivals </a>
+            </li>
+          </ol>
+        </nav>
+      </div>
+    </div>
 
     <main>
-      <div class="bg">
-        <div class="brand container">
-          <div class="brand__block">
-            <span class="brand__primary brand__text">THE BRAND</span
-            ><span class="brand__text">OF LUXERIOUS <span class="pink"> FASHION</span></span>
+      <div class="slider">
+        <button class="slider__btn"><span class="fa fa-chevron-left"></span></button>
+        <img class="slider__slide" src="img/slider1.png" alt="" />
+        <button class="slider__btn"><span class="fa fa-chevron-right"></span></button>
+      </div>
+
+      <div class="collection container">
+        <div class="collection__content">
+          <h3 class="collection__title">WOMEN COLLECTION</h3>
+          <h2 class="collection__h2">Moschino Cheap And Chic</h2>
+          <p class="collection__p">
+            Compellingly actualize fully researched processes before proactive outsourcing.
+            Progressively syndicate collaborative architectures before cutting-edge services.
+            Completely visualize parallel core competencies rather than exceptional portals.
+          </p>
+          <div class="collection__info">
+            <span class="collection__data"><span class="gray">MATERIAL:</span> COTTON</span>
+            <span class="collection__data"><span class="gray">DESIGNER:</span> BINBURHAN</span>
           </div>
+          <span class="collection__price">$561</span>
+          <hr />
+
+          <div class="choose">
+            <div class="choose__elem">
+              <h3 class="choose__h3">CHOOSE COLOR</h3>
+              <button class="collection__select">
+                <span><span class="color fa fa-square"></span>Red</span>
+                <span class="arrow fa fa-angle-down"></span>
+              </button>
+            </div>
+            <div class="choose__elem">
+              <h3 class="choose__h3">CHOOSE SIZE</h3>
+              <button class="collection__select">
+                <span>XXL</span> <span class="arrow fa fa-angle-down"></span>
+              </button>
+            </div>
+            <div class="choose__elem">
+              <h3 class="choose__h3">QUANTITY</h3>
+              <button class="collection__select">
+                <span>2</span> <span class="arrow fa fa-angle-down"></span>
+              </button>
+            </div>
+          </div>
+
+          <button class="cart-menu__checkout cart-menu__btn-primary">
+            <span class="fa fa-shopping-cart"></span> Add to Cart
+          </button>
         </div>
       </div>
 
-      <section class="hot container">
-        <a href="/product.html">
-          <div class="hot__img1 hot__img">
-            <img src="img/hot1.jpg" alt="hot" />
-            <div class="hot__mark"><span>hOT dEAL</span> <span class="pink">FOR MEN</span></div>
-          </div>
-        </a>
-        <div class="hot__img2 hot__img">
-          <img src="img/hot2.jpg" alt="hot" />
-          <div class="hot__mark"><span>30% offer</span> <span class="pink">women</span></div>
-        </div>
-        <div class="hot__img3 hot__img">
-          <img src="img/hot3.jpg" alt="hot" />
-          <div class="hot__mark">
-            <span>LUXIROUS &amp;&nbsp;trendy</span>
-            <span class="pink">ACCESORIES</span>
-          </div>
-        </div>
-        <div class="hot__img4 hot__img">
-          <img src="img/hot4.jpg" alt="hot" />
-          <div class="hot__mark"><span>new arrivals</span> <span class="pink">FOR kids</span></div>
-        </div>
-      </section>
-
       <section class="featured container">
-        <h2 class="featured__h2">Fetured Items</h2>
-        <p class="featured__p">
-          Shop for items based on&nbsp;what we&nbsp;featured in&nbsp;this week
-        </p>
+        <h1 class="featured__titel">you may like also</h1>
         <div class="featured__flex">
-          <a href="/single.html" style="text-decoration: none">
-            <article class="featured__card">
-              <button class="featured__add">
-                <img class="featured__cart" src="img/cart2.png" alt="cart" /> Add to Cart
-              </button>
-              <img class="featured__img" src="img/card1.jpg" alt="card" class="featured__img" />
-              <p class="featured__item">Mango People T-shirt</p>
-              <span class="featured__price">$52.00</span>
-            </article>
-          </a>
+          <article class="featured__card">
+            <button class="featured__add">
+              <img class="featured__cart" src="img/cart2.png" alt="cart" /> Add to Cart
+            </button>
+            <img class="featured__img" src="img/card1.jpg" alt="card" class="featured__img" />
+            <p class="featured__item">Mango People T-shirt</p>
+            <span class="featured__price">$52.00</span>
+          </article>
           <article class="featured__card">
             <button class="featured__add">
               <img class="featured__cart" src="img/cart2.png" alt="cart" /> Add to Cart
@@ -495,115 +523,48 @@
             <p class="featured__item">Mango People T-shirt</p>
             <span class="featured__price">$52.00</span>
           </article>
-          <article class="featured__card">
-            <button class="featured__add">
-              <img class="featured__cart" src="img/cart2.png" alt="cart" /> Add to Cart
-            </button>
-            <img class="featured__img" src="img/card5.jpg" alt="card" class="featured__img" />
-            <p class="featured__item">Mango People T-shirt</p>
-            <span class="featured__price">$52.00</span>
-          </article>
-          <article class="featured__card">
-            <button class="featured__add">
-              <img class="featured__cart" src="img/cart2.png" alt="cart" /> Add to Cart
-            </button>
-            <img class="featured__img" src="img/card6.jpg" alt="card" class="featured__img" />
-            <p class="featured__item">Mango People T-shirt</p>
-            <span class="featured__price">$52.00</span>
-          </article>
-          <article class="featured__card">
-            <button class="featured__add">
-              <img class="featured__cart" src="img/cart2.png" alt="cart" /> Add to Cart
-            </button>
-            <img class="featured__img" src="img/card7.jpg" alt="card" class="featured__img" />
-            <p class="featured__item">Mango People T-shirt</p>
-            <span class="featured__price">$52.00</span>
-          </article>
-          <article class="featured__card">
-            <button class="featured__add">
-              <img class="featured__cart" src="img/cart2.png" alt="cart" /> Add to Cart
-            </button>
-            <img class="featured__img" src="img/card8.jpg" alt="card" class="featured__img" />
-            <p class="featured__item">Mango People T-shirt</p>
-            <span class="featured__price">$52.00</span>
-          </article>
         </div>
-        <button class="featured__browse">
-          Browse All Product <span class="fa fa-long-arrow-right"></span>
-        </button>
       </section>
-
-      <div class="sale container">
-        <div class="sale__art-block">
-          <img class="sale__img" src="img/winter.jpg" alt="winter-sale" />
-          <div class="sale__offer">
-            <span class="sale__primary">30% <span class="pink">OFFER</span> </span
-            ><span class="sale__second">FOR WOMEN</span>
-          </div>
-        </div>
-        <div class="sale__advantages">
-          <img class="sale__icon" src="img/delivery.png" alt="delivery" srcset="" />
-          <h3 class="sale__h3">Free Delivery</h3>
-          <p class="sale__p">
-            Worldwide delivery on&nbsp;all. Authorit tively morph next-generation innov tion with
-            extensive models.
-          </p>
-          <img class="sale__icon" src="img/sale.png" alt="sale" srcset="" />
-          <h3 class="sale__h3">Sales &amp;&nbsp;discounts</h3>
-          <p class="sale__p">
-            Worldwide delivery on&nbsp;all. Authorit tively morph next-generation innov tion with
-            extensive models.
-          </p>
-          <img class="sale__icon" src="img/quality.png" alt="quality" srcset="" />
-          <h3 class="sale__h3">Quality assurance</h3>
-          <p class="sale__p">
-            Worldwide delivery on&nbsp;all. Authorit tively morph next-generation innov tion with
-            extensive models.
-          </p>
-        </div>
-      </div>
-
-      <div class="subscribe">
-        <div class="subscribe__bg"></div>
-
-        <div class="subscribe__flex container">
-          <div class="subscribe__container">
-            <figure class="subscribe__figure">
-              <img class="subscribe__avatar" src="img/avatar.png" alt="avatar" />
-              <div class="subscribe__text">
-                <p class="subscribe__citate">
-                  &laquo;Vestibulum quis porttitor dui! Quisque viverra nunc&nbsp;mi,
-                  a&nbsp;pulvinar purus condimentum&nbsp;a. Aliquam condimentum mattis neque sed
-                  pretium&raquo;
-                </p>
-                <caption>
-                  <span class="subscribe__primary">Bin Burhan</span>
-                  <span class="subscribe__second">Dhaka, Bd</span>
-                </caption>
-              </div>
-            </figure>
-            <div class="subscribe__slider">
-              <button class="subscribe__btn"></button>
-              <button class="subscribe__btn btn__active"></button
-              ><button class="subscribe__btn"></button>
-            </div>
-          </div>
-          <form action="" class="subscribe__form">
-            <fieldset>
-              <legend class="subscribe__legend">
-                <span class="legend__primary legend__text">Subscribe</span
-                ><span class="legend__second legend__text">FOR OUR NEWLETTER AND PROMOTION</span>
-              </legend>
-              <div class="subscribe__flex">
-                <input class="subscribe__input" type="email" placeholder="Enter Your Email" />
-                <input class="subscribe__send" type="button" value="Subscribe" />
-              </div>
-            </fieldset>
-          </form>
-        </div>
-      </div>
     </main>
 
+    <div class="subscribe">
+      <div class="subscribe__bg"></div>
+
+      <div class="subscribe__flex container">
+        <div class="subscribe__container">
+          <figure class="subscribe__figure">
+            <img class="subscribe__avatar" src="img/avatar.png" alt="avatar" />
+            <div class="subscribe__text">
+              <p class="subscribe__citate">
+                &laquo;Vestibulum quis porttitor dui! Quisque viverra nunc&nbsp;mi, a&nbsp;pulvinar
+                purus condimentum&nbsp;a. Aliquam condimentum mattis neque sed pretium&raquo;
+              </p>
+              <caption>
+                <span class="subscribe__primary">Bin Burhan</span>
+                <span class="subscribe__second">Dhaka, Bd</span>
+              </caption>
+            </div>
+          </figure>
+          <div class="subscribe__slider">
+            <button class="subscribe__btn"></button>
+            <button class="subscribe__btn btn__active"></button
+            ><button class="subscribe__btn"></button>
+          </div>
+        </div>
+        <form action="" class="subscribe__form">
+          <fieldset>
+            <legend class="subscribe__legend">
+              <span class="legend__primary legend__text">Subscribe</span
+              ><span class="legend__second legend__text">FOR OUR NEWLETTER AND PROMOTION</span>
+            </legend>
+            <div class="subscribe__flex">
+              <input class="subscribe__input" type="email" placeholder="Enter Your Email" />
+              <input class="subscribe__send" type="button" value="Subscribe" />
+            </div>
+          </fieldset>
+        </form>
+      </div>
+    </div>
     <footer class="footer">
       <div class="footer__top container">
         <div class="footer__left">
