--- a/cart.html
+++ b/cart.html
@@ -4,10 +4,12 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Shopping-cart</title>
     <link rel="stylesheet" href="css/reset.css" />
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="css/font-awesome.min.css" />
+    <link rel="stylesheet" href="css/product.css" />
+    <link rel="stylesheet" href="css/shopping.css" />
   </head>
   <body>
     <header class="header">
@@ -421,189 +423,147 @@
       </div>
     </header>
 
+    <div class="bg_arrivals">
+      <div class="arrivals container">
+        <h2 class="arrivals__h3">new arrivals</h2>
+        <nav class="arrivals__nav">
+          <ol class="arrivals__ol">
+            <li class="arrivals__li"><a href="#" class="arrivals__link"> home </a></li>
+            <li class="arrivals__li"><a href="#" class="arrivals__link"> men </a></li>
+            <li class="arrivals__li">
+              <a href="#" class="arrivals__link link_last"> new arrivals </a>
+            </li>
+          </ol>
+        </nav>
+      </div>
+    </div>
+
     <main>
-      <div class="bg">
-        <div class="brand container">
-          <div class="brand__block">
-            <span class="brand__primary brand__text">THE BRAND</span
-            ><span class="brand__text">OF LUXERIOUS <span class="pink"> FASHION</span></span>
-          </div>
+      <div class="product container">
+        <div class="product__header">
+          <span>Product Details</span>
+          <span>unite Price</span>
+          <span>Quantity</span>
+          <span>shipping</span>
+          <span>Subtotal</span>
+          <span>ACTION</span>
         </div>
-      </div>
-
-      <section class="hot container">
-        <a href="product.html">
-          <div class="hot__img1 hot__img">
-            <img src="img/hot1.jpg" alt="hot" />
-            <div class="hot__mark"><span>hOT dEAL</span> <span class="pink">FOR MEN</span></div>
-          </div>
-        </a>
-        <div class="hot__img2 hot__img">
-          <img src="img/hot2.jpg" alt="hot" />
-          <div class="hot__mark"><span>30% offer</span> <span class="pink">women</span></div>
-        </div>
-        <div class="hot__img3 hot__img">
-          <img src="img/hot3.jpg" alt="hot" />
-          <div class="hot__mark">
-            <span>LUXIROUS &amp;&nbsp;trendy</span>
-            <span class="pink">ACCESORIES</span>
-          </div>
-        </div>
-        <div class="hot__img4 hot__img">
-          <img src="img/hot4.jpg" alt="hot" />
-          <div class="hot__mark"><span>new arrivals</span> <span class="pink">FOR kids</span></div>
-        </div>
-      </section>
-
-      <section class="featured container">
-        <h2 class="featured__h2">Fetured Items</h2>
-        <p class="featured__p">
-          Shop for items based on&nbsp;what we&nbsp;featured in&nbsp;this week
-        </p>
-        <div class="featured__flex">
-          <a href="single.html" style="text-decoration: none">
-            <article class="featured__card">
-              <button class="featured__add">
-                <img class="featured__cart" src="img/cart2.png" alt="cart" /> Add to Cart
-              </button>
-              <img class="featured__img" src="img/card1.jpg" alt="card" class="featured__img" />
-              <p class="featured__item">Mango People T-shirt</p>
-              <span class="featured__price">$52.00</span>
-            </article>
-          </a>
-          <article class="featured__card">
-            <button class="featured__add">
-              <img class="featured__cart" src="img/cart2.png" alt="cart" /> Add to Cart
-            </button>
-            <img class="featured__img" src="img/card2.jpg" alt="card" class="featured__img" />
-            <p class="featured__item">Mango People T-shirt</p>
-            <span class="featured__price">$52.00</span>
-          </article>
-          <article class="featured__card">
-            <button class="featured__add">
-              <img class="featured__cart" src="img/cart2.png" alt="cart" /> Add to Cart
-            </button>
-            <img class="featured__img" src="img/card3.jpg" alt="card" class="featured__img" />
-            <p class="featured__item">Mango People T-shirt</p>
-            <span class="featured__price">$52.00</span>
-          </article>
-          <article class="featured__card">
-            <button class="featured__add">
-              <img class="featured__cart" src="img/cart2.png" alt="cart" /> Add to Cart
-            </button>
-            <img class="featured__img" src="img/card4.jpg" alt="card" class="featured__img" />
-            <p class="featured__item">Mango People T-shirt</p>
-            <span class="featured__price">$52.00</span>
-          </article>
-          <article class="featured__card">
-            <button class="featured__add">
-              <img class="featured__cart" src="img/cart2.png" alt="cart" /> Add to Cart
-            </button>
-            <img class="featured__img" src="img/card5.jpg" alt="card" class="featured__img" />
-            <p class="featured__item">Mango People T-shirt</p>
-            <span class="featured__price">$52.00</span>
-          </article>
-          <article class="featured__card">
-            <button class="featured__add">
-              <img class="featured__cart" src="img/cart2.png" alt="cart" /> Add to Cart
-            </button>
-            <img class="featured__img" src="img/card6.jpg" alt="card" class="featured__img" />
-            <p class="featured__item">Mango People T-shirt</p>
-            <span class="featured__price">$52.00</span>
-          </article>
-          <article class="featured__card">
-            <button class="featured__add">
-              <img class="featured__cart" src="img/cart2.png" alt="cart" /> Add to Cart
-            </button>
-            <img class="featured__img" src="img/card7.jpg" alt="card" class="featured__img" />
-            <p class="featured__item">Mango People T-shirt</p>
-            <span class="featured__price">$52.00</span>
-          </article>
-          <article class="featured__card">
-            <button class="featured__add">
-              <img class="featured__cart" src="img/cart2.png" alt="cart" /> Add to Cart
-            </button>
-            <img class="featured__img" src="img/card8.jpg" alt="card" class="featured__img" />
-            <p class="featured__item">Mango People T-shirt</p>
-            <span class="featured__price">$52.00</span>
-          </article>
-        </div>
-        <button class="featured__browse hover">
-          Browse All Product <span class="fa fa-long-arrow-right"></span>
-        </button>
-      </section>
-
-      <div class="sale container">
-        <div class="sale__art-block">
-          <img class="sale__img" src="img/winter.jpg" alt="winter-sale" />
-          <div class="sale__offer">
-            <span class="sale__primary">30% <span class="pink">OFFER</span> </span
-            ><span class="sale__second">FOR WOMEN</span>
-          </div>
-        </div>
-        <div class="sale__advantages">
-          <img class="sale__icon" src="img/delivery.png" alt="delivery" srcset="" />
-          <h3 class="sale__h3">Free Delivery</h3>
-          <p class="sale__p">
-            Worldwide delivery on&nbsp;all. Authorit tively morph next-generation innov tion with
-            extensive models.
-          </p>
-          <img class="sale__icon" src="img/sale.png" alt="sale" srcset="" />
-          <h3 class="sale__h3">Sales &amp;&nbsp;discounts</h3>
-          <p class="sale__p">
-            Worldwide delivery on&nbsp;all. Authorit tively morph next-generation innov tion with
-            extensive models.
-          </p>
-          <img class="sale__icon" src="img/quality.png" alt="quality" srcset="" />
-          <h3 class="sale__h3">Quality assurance</h3>
-          <p class="sale__p">
-            Worldwide delivery on&nbsp;all. Authorit tively morph next-generation innov tion with
-            extensive models.
-          </p>
-        </div>
-      </div>
-
-      <div class="subscribe">
-        <div class="subscribe__bg"></div>
-
-        <div class="subscribe__flex container">
-          <div class="subscribe__container">
-            <figure class="subscribe__figure">
-              <img class="subscribe__avatar" src="img/avatar.png" alt="avatar" />
-              <div class="subscribe__text">
-                <p class="subscribe__citate">
-                  &laquo;Vestibulum quis porttitor dui! Quisque viverra nunc&nbsp;mi,
-                  a&nbsp;pulvinar purus condimentum&nbsp;a. Aliquam condimentum mattis neque sed
-                  pretium&raquo;
-                </p>
-                <caption>
-                  <span class="subscribe__primary">Bin Burhan</span>
-                  <span class="subscribe__second">Dhaka, Bd</span>
-                </caption>
+        <div class="product__body">
+          <div class="product__container">
+            <div class="card">
+              <div class="flex">
+                <img src="img/pr1.png" alt="product" />
+                <div class="card__block">
+                  <div class="card__name">Mango People T-shirt</div>
+                  <div class="card__atr"><span class="bold">Color:</span> Red</div>
+                  <div class="card__atr"><span class="bold">Size:</span> Xll</div>
+                </div>
               </div>
-            </figure>
-            <div class="subscribe__slider">
-              <button class="subscribe__btn"></button>
-              <button class="subscribe__btn btn__active"></button
-              ><button class="subscribe__btn"></button>
+              <span class="card__text">$150</span>
+              <input class="card__text card__input" type="text" value="2" />
+              <span class="card__text">free</span>
+              <span class="card__text">$300</span>
+              <button class="card__btn"><span class="fa fa-times-circle"></span></button>
+            </div>
+            <div class="card">
+              <div class="flex">
+                <img src="img/pr2.png" alt="product" />
+                <div class="card__block">
+                  <div class="card__name">Mango People T-shirt</div>
+                  <div class="card__atr"><span class="bold">Color:</span> Red</div>
+                  <div class="card__atr"><span class="bold">Size:</span> Xll</div>
+                </div>
+              </div>
+              <span class="card__text">$150</span>
+              <input class="card__text card__input" type="text" value="2" />
+              <span class="card__text">free</span>
+              <span class="card__text">$300</span>
+              <button class="card__btn"><span class="fa fa-times-circle"></span></button>
+            </div>
+            <div class="card">
+              <div class="flex">
+                <img src="img/pr3.png" alt="product" />
+                <div class="card__block">
+                  <div class="card__name">Mango People T-shirt</div>
+                  <div class="card__atr"><span class="bold">Color:</span> Red</div>
+                  <div class="card__atr"><span class="bold">Size:</span> Xll</div>
+                </div>
+              </div>
+              <span class="card__text">$150</span>
+              <input class="card__text card__input" type="text" value="2" />
+              <span class="card__text">free</span>
+              <span class="card__text">$300</span>
+              <button class="card__btn"><span class="fa fa-times-circle"></span></button>
             </div>
           </div>
-          <form action="" class="subscribe__form">
-            <fieldset>
-              <legend class="subscribe__legend">
-                <span class="legend__primary legend__text">Subscribe</span
-                ><span class="legend__second legend__text">FOR OUR NEWLETTER AND PROMOTION</span>
-              </legend>
-              <div class="subscribe__flex">
-                <input class="subscribe__input" type="email" placeholder="Enter Your Email" />
-                <input class="subscribe__send hover" type="button" value="Subscribe" />
-              </div>
-            </fieldset>
-          </form>
+          <div class="btn-block">
+            <button class="cart-menu__buy cart-menu__btn-primary">cLEAR SHOPPING CART</button
+            ><button class="cart-menu__buy cart-menu__btn-primary">cONTINUE sHOPPING</button>
+          </div>
+        </div>
+      </div>
+      <div class="form-block container">
+        <form class="form" action="">
+          <h2 class="form__h3">Shipping Adress</h2>
+          <button class="form__sort">Bangladesh<span class="fa fa-caret-down arrow"></span></button>
+          <input type="text" placeholder="State" class="form__input" />
+          <input type="text" placeholder="Postcode / Zip" class="form__input" />
+          <input class="form__butn" type="button" value="get a quote" />
+        </form>
+        <div class="discount">
+          <h2 class="form__h3">coupon discount</h2>
+          <p class="discount__p">Enter your coupon code if you have one</p>
+          <input type="text" placeholder="State" class="form__input" />
+          <input class="form__butn" type="button" value="Apply coupon" />
+        </div>
+        <div class="checkout">
+          <div>
+            <p class="checkout__primary">Sub total <span class="price">$900</span></p>
+            <p class="checkout__second">GRAND TOTAL <span class="pink price">$900</span></p>
+          </div>
+          <button class="checkout__btn hover">proceed to checkout</button>
         </div>
       </div>
     </main>
 
+    <div class="subscribe">
+      <div class="subscribe__bg"></div>
+
+      <div class="subscribe__flex container">
+        <div class="subscribe__container">
+          <figure class="subscribe__figure">
+            <img class="subscribe__avatar" src="img/avatar.png" alt="avatar" />
+            <div class="subscribe__text">
+              <p class="subscribe__citate">
+                &laquo;Vestibulum quis porttitor dui! Quisque viverra nunc&nbsp;mi, a&nbsp;pulvinar
+                purus condimentum&nbsp;a. Aliquam condimentum mattis neque sed pretium&raquo;
+              </p>
+              <caption>
+                <span class="subscribe__primary">Bin Burhan</span>
+                <span class="subscribe__second">Dhaka, Bd</span>
+              </caption>
+            </div>
+          </figure>
+          <div class="subscribe__slider">
+            <button class="subscribe__btn"></button>
+            <button class="subscribe__btn btn__active"></button
+            ><button class="subscribe__btn"></button>
+          </div>
+        </div>
+        <form action="" class="subscribe__form">
+          <fieldset>
+            <legend class="subscribe__legend">
+              <span class="legend__primary legend__text">Subscribe</span
+              ><span class="legend__second legend__text">FOR OUR NEWLETTER AND PROMOTION</span>
+            </legend>
+            <div class="subscribe__flex">
+              <input class="subscribe__input" type="email" placeholder="Enter Your Email" />
+              <input class="subscribe__send hover" type="button" value="Subscribe" />
+            </div>
+          </fieldset>
+        </form>
+      </div>
+    </div>
     <footer class="footer">
       <div class="footer__top container">
         <div class="footer__left">
