--- a/single.html
+++ b/single.html
@@ -18,7 +18,7 @@
         <!-- Left side -->
         <div class="header__left">
           <!-- Logo -->
-          <a href="/" class="logo">
+          <a href="index.html" class="logo">
             <img src="img/logo.jpg" alt="logo" />
             <span class="logo__text"> bran<span class="pink bold">d</span></span>
           </a>
@@ -559,7 +559,7 @@
             </legend>
             <div class="subscribe__flex">
               <input class="subscribe__input" type="email" placeholder="Enter Your Email" />
-              <input class="subscribe__send" type="button" value="Subscribe" />
+              <input class="subscribe__send hover" type="button" value="Subscribe" />
             </div>
           </fieldset>
         </form>
